# provaTest

./: .gitignore  main.py  pyproject.toml  test_funzioni.py  test_property.py
